# finance-tools

./: .dockerignore  .env.example  .gitignore  API_README.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  Implementation Plan_ Rule-Based Option Strike_Expi.md  README.md  api_client.ts  api_handlers.py  api_server.py  api_types.py  backend_plan.md  calculate_gamma_delta.py  computation.md  docker-compose.yml  get_options_data.py  get_technical_indicator.py  implementation_plan.md  json_to_tson.py  mcp.py  mcp_commands.md  mcp_server.ts  multitasking.py  package-lock.json  package.json  pi-session-2026-05-09T23-21-24-704Z_019e0f0b-afde-735b-9038-727dd33bf0be.html  pyproject.toml  requirements.txt  securities_margins_requirement_updated_formula.md  vercel.json  visualize_gex.py  visualize_indicators.py
api/: api_handlers.py  api_server.py  api_types.py  cache_manager.py  index.py
client/: api_client.ts  api_types.ts
core/analysis/: __init__.py  calculate_gamma_delta.py  calculate_risk_free_rate.py  csp_math_engine.py
core/data/: __init__.py  bulk_data_loader.py  get_financial_statement.py  get_gex_data.py  get_options_data.py  get_stock_price.py  get_technical_indicator.py  gex_provider.py
core/strategies/: DIAGONAL_COLUMNS.md  EFFICIENCY_COLUMNS.md  (+8 more)
docs/: audit_efficiency_diagonal.md  option_strike_optimizer.md
mcp/: mcp.py  mcp_server.ts
scratch/: check_price.py  check_raw_yf.py  check_spy.py  check_spy_oi.py  debug_expirations.py
scripts/: README.md  test_optimizer.py
visualizers/: visualize_gex.py  visualize_indicators.py
webapp/: README.md  index.html
